Fix: Change name of service was not always recorded as a transaction. Add new submenu for operations on node classes and members of node classes. 	Rename class: Rename all members of the class. Single node rename stays as direct manipulation (click for inplace edit). 	Rename suffix: change the suffix letter into a string of your own choosing. 	Make single/Make class Fix: Adjust layout of componentthreat dialog to prevent rows from linewrapping (again).

--- a/css/raster.css
+++ b/css/raster.css
@@ -391,7 +391,12 @@ div.th_descr {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
-div.th_del { width: 24px; padding-left: 0; background: white; }
+div.th_del {
+	width: 15px;
+	padding-left: 0;
+	padding-right: 0;
+	background: white;
+}
 div.th_del input { padding: 1px; }
 .th_name .inplace_field { width: 14em; }
 .th_descr .inplace_field { width: 46em; }
